<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">去打球</string>
    <string name="regist_content">信息完善</string>
    <string name="mark_site">标记球场</string>
    <string name="site_detail">球场详情</string>
    <string name="some_label">球场标签</string>
    <string name="nickname">昵称</string>
    <string name="birthday">出生日期</string>
    <string name="role">擅长位置</string>
    <string name="sex">性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="content_ps">下列资料保密,不作展示</string>
    <string name="height">身高</string>
    <string name="cm">CM</string>
    <string name="weight">体重</string>
    <string name="kg">KG</string>
    <string name="toast_error_username_null">要为自己取个名字哦</string>
    <string name="toast_error_birthday_null">把您的生日告诉我们吧</string>
    <string name="toast_error_height_null">请输入您的身高</string>
    <string name="toast_error_weight_null">请输入您的体重</string>
    <string name="site_content">请输入球场名称</string>
    <string name="label_content">当前标签：</string>
    <string name="label_click">添加标签,让更多人关注球场</string>
    <string name="site_address">地址：</string>
    <string name="label_search">搜索相关标签</string>
    <string name="label_tag">#</string>
    <string name="label_ps">长按标签删除</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新</string>
    <string name="xlistview_header_hint_loading">正在刷新...</string>
    <string name="xlistview_header_last_time">上次更新：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开加载</string>
	<string name="xlistview_footer_hint_loading">正在加载...</string>
	<string name="first_sign">首次标记</string>
	<string name="site_attention">关注</string>
	<string name="site_went">关注</string>
	<string name="site_group">场地群组</string>
	<string name="new_group">新建群组</string>
	<string name="group_img_text">点击更改群组头像</string>
	<string name="group_name_text">群组名:</string>
	<string name="group_declare_text">群组说明:</string>
	<string name="group_name_content">为群组起个名字吧</string>
	<string name="group_declare_content">说明一下群组吧</string>
	<string name="group_content">群组资料</string>
	<string name="group_people">群成员</string>
	<string name="come_from">来自</string>
	<string name="location">地点</string>
	<string name="intro">简介</string>
	<string name="group_master">群主</string>
    <string name="group_button_add">+加入群组</string>
    <string name="longclick_speak">长按说话</string>
    <string name="picture">照片</string>
    <string name="camera">拍摄</string>
    <string name="action_settings">Settings</string>
    <string name="voice_up_tips">手指上滑,取消发送</string>
    <string name="voice_cancel_tips">松开手指，取消发送</string>
    <string name="voice_short_tips">录音时间太短</string>
    <string name="add_avator">头像</string>
    <string name="tips">提示</string>
    <string name="add_name">账号</string>
    <string name="add_gender">性别</string>
    <string name="blacklist">黑名单</string>
    <string name="chat">发起会话</string>
    <string name="add_friend">添加好友</string>
    <string name="black_tips">已添加至黑名单，你将不再收到对方的消息!</string>
    <string name="pop_photo">拍照</string>
    <string name="pop_choose">从手机相册选中</string>
    <string name="network_tips">当前网络不可用,请检查您的网络!</string>
    <string name="user_message_content">我的资料</string>
    <string name="play_time">球龄:</string>
    <string name="individual_resume">个人简介</string>
    <string name="group_text">群组</string>
    <string name="site_text">球场</string>
    <string name="site_map">>>到这里打球</string>
    <string name="map_content">球场位置</string>
    <string name="message_search_hint">搜索&#8230;</string>
</resources>