<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="#03a9f4" >

            <Button
                android:id="@+id/title_bar_left_menu"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:background="@drawable/xu" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/serch"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/regist_content"
                android:textColor="#ffffff"
                android:textSize="18sp" />

        </RelativeLayout>
        
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        >
        
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nickname"
                android:textColor="#000000"
                />
            <EditText 
                android:id="@id/nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_bg_selector"
                android:layout_marginLeft="15dp"
                android:textColor="#000000"
                />
            
        </LinearLayout>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            >
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sex"
                android:textColor="#000000"
                android:layout_gravity="center_vertical"
                />
            <LinearLayout 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                >
                <TextView 
                android:id="@id/male"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/tvbar"
                android:text="@string/male"
                android:gravity="center_horizontal"
                android:textColor="#ffffff"
                />
            	<TextView 
            	android:id="@id/female"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/tvbartwo"
                android:layout_weight="1"
                android:text="@string/female"
                android:gravity="center_horizontal"
                android:textColor="#000000"
                />
            </LinearLayout>
            
            
        </LinearLayout>
        
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            >
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/birthday"
                android:textColor="#000000"
                />
            <EditText 
                android:id="@id/birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_bg_selector"
                android:layout_marginLeft="15dp"
                android:textColor="#000000"
                />
        </LinearLayout>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingTop="20dp"
            >
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/role"
                android:textColor="#000000"
                android:gravity="center_vertical"
                />
            <Spinner 
                android:id="@id/role"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="#000000"
                />
            
        </LinearLayout>
        
    </LinearLayout>
    <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            >
            <TextView 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/content_ps"
                android:textColor="#000000"
                />
            
        </LinearLayout>
     <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        >
     <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height"
                android:textColor="#000000"
                />
            <EditText 
                android:id="@id/height"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_bg_selector"
                android:layout_marginLeft="15dp"
                android:inputType="number"
                android:textColor="#000000"
                />
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cm"
                android:textColor="#000000"
                />
            
        </LinearLayout>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            >
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:textColor="#000000"
                />
            <EditText 
                android:id="@id/weight"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_bg_selector"
                android:layout_marginLeft="15dp"
                android:inputType="number"
                android:textColor="#000000"
                />
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kg"
                android:textColor="#000000"
                />
            
        </LinearLayout>
        </LinearLayout>
		<LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    >
		    <Button 
		    android:id="@id/regist_submit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="40dp"
        	android:layout_marginRight="40dp"
        	android:background="#26a4de"
        	android:text="提交"
        	android:textColor="#ffffff"
            />
		</LinearLayout>
</LinearLayout>
