<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#F0F0F2">
    
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#03a9f4" >

        <Button
            android:id="@id/site_cancel"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/xu" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/serch"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/new_group"
            android:textColor="#ffffff"
            android:textSize="18sp" />
        
        <Button
            android:id="@id/group_commit"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/check_right" />
    </RelativeLayout>
	
    <LinearLayout 
        android:id="@id/add_group_img"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@drawable/border_gray"
        >
        <com.basketball.play.view.CircularImage
        			android:id="@id/group_img"
        			android:layout_width="40dp"
        			android:layout_height="40dp"
        			android:background="@drawable/me_head_bg"
        			android:layout_gravity="center_vertical"
        			android:layout_marginLeft="10dp"
        			/>
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/group_img_text"
            android:textColor="@color/black"
            />
    </LinearLayout>
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group_name_text"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        />
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/border_gray"
        >
        <EditText 
            android:id="@id/group_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:hint="@string/group_name_content"
            android:background="@drawable/edittext_bg_selector"
            />
    </LinearLayout>
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group_declare_text"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        />
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/border_gray"
        >
        
        <EditText 
            android:id="@id/group_content"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:hint="@string/group_declare_content"
            android:inputType="textMultiLine"
			android:gravity="left|top"
            />
    </LinearLayout>
</LinearLayout>
