<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#f6f6f6" >

        <Button
            android:id="@id/close_label_activity"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/close_label" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/serch"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/some_label"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Button
            android:id="@id/submit_label_activity"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/check" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/label_ps" />

        <com.basketball.play.view.FlowLayout
            android:id="@id/tag_vessel"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:scrollbars="vertical" >
        </com.basketball.play.view.FlowLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/linearlayout_border" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal|center_vertical" 
                android:focusable="true"   
				android:focusableInTouchMode="true"
                >

                <EditText
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_border"
                    android:gravity="center"
                    android:hint="@string/label_search" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/u3" />
            </LinearLayout>
        </LinearLayout>

        <ListView
            android:id="@id/label_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@color/black"
            android:dividerHeight="0.5px" >
        </ListView>
    </LinearLayout>

</LinearLayout>