<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/gray_light">
    
	<RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#03a9f4" >

        <Button
            android:id="@id/site_cancel"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/xu" />

        <TextView
            android:id="@id/user_text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/serch"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textColor="#ffffff"
            android:textSize="18sp" />
        
    </RelativeLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:background="@color/gray_light"
        >
        <ImageView 
            android:id="@id/user_img_large"
            android:layout_width="80dp"
            android:layout_height="80dp"
            />
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:paddingLeft="10dp"
            android:orientation="vertical"
            >
            <LinearLayout 
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:paddingBottom="5dp"
                >
                <TextView 
                    android:id="@id/user_textv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:textSize="20sp"
                    />
                <ImageView 
                    android:id="@id/user_info_sex"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    />
            </LinearLayout>
            <LinearLayout 
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:paddingBottom="5dp"
                >
                <TextView 
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/play_time"
                    />
                <TextView 
                    android:id="@id/play_time"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    />
            </LinearLayout>
            <TextView 
                android:id="@id/user_role"
            	android:layout_width="wrap_content"
                android:layout_height="15dp"
                    />
        </LinearLayout>
    </LinearLayout>
    
    <!-- 条目 -->
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="@color/white"
        android:orientation="horizontal"
        >
        <LinearLayout 
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <TextView 
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/individual_resume"
                android:gravity="center_vertical"
                />
        </LinearLayout>
        <TextView 
            android:id="@id/individual_resume"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            />
    </LinearLayout>
    
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        >
        <LinearLayout 
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView 
                android:id="@id/group_count"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:textSize="25sp"
                />
            <TextView 
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/group_text"
                />
        </LinearLayout>
        <LinearLayout 
            android:layout_width="0dp"
            android:layout_weight="7"
            android:layout_height="wrap_content"
            >
            
        </LinearLayout>
        <ImageView 
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="20dp"
            android:background="@drawable/right_arrow"
            android:layout_gravity="center_vertical"
            />
    </LinearLayout>
    
        <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        >
        <LinearLayout 
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView 
                android:id="@id/site_count"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:textSize="25sp"
                />
            <TextView 
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/site_text"
                />
        </LinearLayout>
        <LinearLayout 
            android:layout_width="0dp"
            android:layout_weight="7"
            android:layout_height="wrap_content"
            >
            
        </LinearLayout>
        <ImageView 
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="20dp"
            android:background="@drawable/right_arrow"
            android:layout_gravity="center_vertical"
            />
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        >
        <Button 
            android:id="@id/group_button_add"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#03a9f4"
            android:textColor="@color/white"
            android:layout_gravity="center"
            />
        </LinearLayout>
</LinearLayout>
